fixed image refresh problem in the contest section